# eso50cm

ESO50CM/: CMakeLists.txt
ESO50CM/Autoguider/: Autoguider.sln
ESO50CM/Autoguider/Autoguider/: Autoguider.vcxproj  Autoguider.vcxproj.filters  ImageProcessor.cpp  ImageProcessor.h
ESO50CM/Autoguider/AutoguiderPanel/: AutoguiderPanel.vcxproj.filters  ImageProcessor.cpp  ImageProcessor.h  ObsControlIF.cpp  Observing.ice  autoguider.ini  autoguiderpanel.cpp  autoguiderpanel.h  autoguiderpanel.ui
ESO50CM/Console/: AMI_Observing_moveToTargetImpl.cpp  Console.pro  Console.qrc  LoggerIF.h  MainController.cpp  MainController.h  MainWindow.cpp  MainWindow.h  Makefile  ObsControlIF.cpp  ObsControlIF.h  TheSky6IF.h  encoder.ui  logpanel.ui  mainwindow.ui  messagetablemodel.cpp  messagetablemodel.h  offset.ui  status.ui
ESO50CM/Deployment/eso50cm/config/: defaultEnv  icebox.config
ESO50CM/Deployment/eso50cm/etc/init.d/: LoggingService
ESO50CM/Deployment/qemu/: startvm-with-bridge
ESO50CM/Deployment/src/: Makefile
ESO50CM/Deployment/ts7800/etc/init.d/: telescope61
ESO50CM/HSGui/include/: hscli.h
ESO50CM/HSGui/src/: CMakeLists.txt  hscli.cpp
ESO50CM/LogLevelPanel/src/: CMakeLists.txt  install_manifest.txt  loglevelpanel.ui
ESO50CM/LogPanel/src/: CMakeLists.txt  LogPanel.pro  Makefile  logpanel.h  logpanel.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  subscriber.cpp
ESO50CM/LogPublisherSample/src/: CMakeLists.txt  publisherTest.cpp
ESO50CM/LogPublisherSampleDummy/include/: LoggerHelperDummy.h
ESO50CM/LogPublisherSampleDummy/src/: CMakeLists.txt  LoggerHelper.cpp  Makefile
ESO50CM/Logger/config/: loggingService.config
ESO50CM/Logger/idl/: LogMessage.ice  LogPublisher.ice  Logger.ice
ESO50CM/Logger/include/: FileStorageDAO.h  LogPublisher.h  LoggerHelper.h  LoggerI.h  MessageStorageDAO.h
ESO50CM/Logger/src/: CMakeLists.txt  FileStorageDAO.cpp  LogMessage.cpp  Logger.cpp  LoggerDevelI.cpp  LoggerHelper.cpp  LoggerI.cpp  LoggingService.cpp  SimpleClientI.cpp  runLoggingService  runSimpleClient
ESO50CM/Observing/config/: Obs-config  config
ESO50CM/Observing/idl/: Observing.ice
ESO50CM/Observing/include/: ObservingImpl.h  TelescopeImpl.h
ESO50CM/Observing/src/: CMakeLists.txt  Client-obs.py  ObsControl.cpp  ObservingImpl.cpp  TelescopeImpl.cpp  eso50cm.py
ESO50CM/StartupPanel/config/: startupPanelConf.xml  startupPanelConf.xsd
ESO50CM/StartupPanel/src/: Ui_StartupPanelBase.ui  startupPanel.py
ESO50CM/TcsGui/include/: TcsGuiController.h  cppContainerServices.h  telescopecli.h
ESO50CM/TcsGui/src/: CMakeLists.txt  Makefile  Obs-config  Observing.cpp  Observing.h  TcsGuiController.cpp  cppContainerServices.cpp  telescopecli.cpp  telescopecli.h
ESO50CM/opencv_hello/: opencv_hello.sln
ESO50CM/opencv_hello/opencv_hello/: OPENCV_DEBUG.props  opencv_hello.vcxproj
ESO50CM/qtcli/src/: cppContainerServices.cpp  telescopecli.h
ESO50CM/tcs/config/: LCU-config
ESO50CM/tcs/idl/: LCU.ice
ESO50CM/tcs/include/: LCUImpl.h  myLCU.h  myTAxis.h  myTClock.h  myTEncoder.h  myTelescope.h  telescope.h
ESO50CM/tcs/src/: AstroUtil.py  CMakeLists.txt  Client-lcu.py  Client.cpp  Client.py  DeviceManager.py  LCUControl.cpp  LCUGetImpl.cpp  LCUImpl.cpp  LCUSetImpl.cpp  Makefile  calculate_tracking_rate.py  common.c  config  get_position.py  main.c  main.cpp  main_sim.c  myLCU.cpp  myTAxis.cpp  myTClock.cpp  myTEncoder.cpp  myTMotor.cpp  myTelescope.cpp  offset_telescope.py  offset_telescope_enc.py  read_encoders.py  rs232.cpp  set_tracking.py  shm_dbg.c  telescope61.c  telescope61.cpp  telescope61_sim.c  telescope61_sim.cpp
branches/eso50cm-gui/ESO50CM/LogLevelPanel/src/: CMakeLists.txt
trunk/ESO50CM/: CMakeLists.txt
trunk/ESO50CM/Console/: AMI_Observing_parkTelescope.cpp  AMI_Observing_parkTelescopeImpl.h  Makefile  ObsControlIF.cpp  main.cpp
trunk/ESO50CM/HSGui/include/: hscli.h
trunk/ESO50CM/HSGui/src/: CMakeLists.txt  hscli.cpp
trunk/ESO50CM/LogLevelPanel/src/: LogLevelPanel.pro  loglevelpanel.cpp
trunk/ESO50CM/LogPanel/src/: CMakeLists.txt  logpanel.cpp  logpanel.h  main.cpp  mainwindow.h  mainwindow.ui  messagetablemodel.cpp
trunk/ESO50CM/LogPublisherSample/src/: CMakeLists.txt  publisherTest.cpp
trunk/ESO50CM/LogPublisherSampleDummy/src/: publisherDummyTest.cpp
trunk/ESO50CM/Logger/config/: icebox.config  loggingService.config  loggingService.config.lcu
trunk/ESO50CM/Logger/idl/: LogMessage.ice  LogPublisher.ice  Logger.ice
trunk/ESO50CM/Logger/include/: FakeConfigurationsStorage.h  LoggerDevelI.h  LoggerHelper.h  LoggerI.h  MessageStorageDAO.h
trunk/ESO50CM/Logger/src/: CMakeLists.txt  FileStorageDAO.cpp  LoggerHelper.cpp  LoggerI.cpp  LoggingService.cpp  SimpleClientI.cpp  createTables.sql  runLoggingService
trunk/ESO50CM/Observing/config/: Obs-config
trunk/ESO50CM/Observing/idl/: Observing.ice
trunk/ESO50CM/Observing/include/: ObservingImpl.h  TelescopeImpl.h
trunk/ESO50CM/Observing/src/: CMakeLists.txt  Client.py  ObsControl.cpp  ObservingImpl.cpp  TelescopeImpl.cpp  eso50cm.py
trunk/ESO50CM/StartupPanel/config/: startupPanelConf.xsd
trunk/ESO50CM/StartupPanel/src/: CMakeLists.txt  Ui_StartupPanelBase.ui  compile  startupPanel.py
trunk/ESO50CM/TcsGui/include/: telescopecli.h
trunk/ESO50CM/TcsGui/src/: CMakeLists.txt  Makefile  TcsGuiController.cpp  commandthread.cpp  cppContainerServices.cpp  cppContainerServices.h  telescopecli.cpp  telescopecli.h
trunk/ESO50CM/qtcli/src/: cppContainerServices.cpp
trunk/ESO50CM/tcs/config/: LCU-config
trunk/ESO50CM/tcs/idl/: LCU.ice
trunk/ESO50CM/tcs/include/: LCUImpl.h  myLCU.h  myTAxis.h  myTClock.h  myTEncoder.h  shm_dbg.h  telescope.h
trunk/ESO50CM/tcs/src/: AstroUtil.py  CMakeLists.txt  Client-lcu.py  Client.cpp  Client.py  LCUControl.cpp  LCUGetImpl.cpp  LCUImpl.cpp  LCUSetImpl.cpp  Makefile  common.cpp  config  main.c  main.cpp  main_sim.cpp  myLCU.cpp  myTEncoder.cpp  myTelescope.cpp  offset_telescope_enc.py  rs232.c  rs232.cpp  telescope61.c  telescope61.cpp  telescope61_sim.c  telescope61_sim.cpp
trunk/ESO50CM/tcs/test/: testEndian.cpp
wiki/: Branches.wiki  (+24 more)
(+455 files in other folders)
